# book-my-yoga

./: README.md  admin.html  book_my_yoga.sql  book_session.php  booking.html  dashboard.html  db.php  index.html  login.html  login_user.php  setup_db.php  signup.html  signup.php  style.css
backend/: .gitignore  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 16eddc69e093_create_user_table.py  d21592539f92_create_add_the_email.py  d8d1275e689b_update_and_added_more_tables.py  efe0340d96d6_update_user_and_add_booking_tables.py
backend/database/: db.py
backend/middleware/: middleware.py
backend/models/: models.py  schemas.py
backend/routes/: auth.py  class_types.py  index.py  teacher.py  user.py  yogo.py
backend/utils/: auth.py
frontend/: next.config.mjs  package.json
frontend/src/: middleware.js
frontend/src/app/: globals.css  layout.js  page.jsx
frontend/src/app/(auth)/sign-in/: page.jsx
frontend/src/app/(auth)/sign-up/: page.jsx
frontend/src/app/(protected)/: layout.js
frontend/src/app/(protected)/booking/: page.jsx
frontend/src/app/(protected)/dashboard/: page.jsx
frontend/src/app/api/auth/[...nextauth]/: route.js
frontend/src/components/: Footer.jsx  Header.jsx
frontend/src/components/ui/: Navbar.jsx
frontend/src/lib/: api.js
frontend/src/types/: next-auth.d.ts
